methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: not found: type Bolean
def haveBaggle():Boolean = {var vuBiscuit:Bolean = false
                                          ^